Mobile White Space Issue
- Attempting vh vw instead and manually resetting margin / paddding

--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,8 @@ body,
     left: 0;
     width: 100%;
     height: 100%;
+    margin: 0;
+    padding: 0;
     overflow: hidden; /* Prevent scrolling */
     font-family: Arial, Helvetica, sans-serif; 
     color: white; 
@@ -29,8 +31,8 @@ canvas, .r3f
     position: fixed; 
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;  
+    height: 100vh;
     border: none; 
 }
 
